rename aliasctl script and add it to release

--- a/.gitea/workflows/release.yml
+++ b/.gitea/workflows/release.yml
@@ -40,13 +40,16 @@ jobs:
             -ldflags="-s -w -X main.version=${VERSION}" \
             -o "dist/${BIN}" ./cmd/kc-policy
           tar -C dist -czf "dist/${BIN}.tar.gz" "${BIN}"
+          cp aliasctl dist/
           sha256sum "dist/${BIN}.tar.gz" >> dist/checksums.txt
+          sha256sum "dist/aliasctl" >> dist/checksums.txt
 
       - name: Upload assets to Gitea release
         uses: https://gitea.com/actions/gitea-release-action@v1
         with:
           files: |
             dist/*.tar.gz
+            dist/aliasctl
             dist/checksums.txt
           generate_release_notes: true
         env:
