update updated_at timestamp

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -25,8 +25,12 @@ jobs:
 
       - name: Go fmt
         run: |
-          gofmt -l .
-          test -z "$(gofmt -l .)"
+          files=$(gofmt -l .)
+          if [ -n "$files" ]; then
+            echo "❌ Files not formatted:"
+            echo "$files"
+            exit 1
+          fi
 
       - name: Go vet
         run: go vet ./...
