--- a/docs/configs/dovecot.conf
+++ b/docs/configs/dovecot.conf
@@ -30,9 +30,10 @@ passdb sql {
   sql_driver = sqlite
   sqlite_path = /var/lib/mailcloak/state.db
 
+  username_format = app:%{user}
   query = SELECT secret_hash AS password \
     FROM apps \
-    WHERE app_id = '%{user}' AND enabled = 1;
+    WHERE app_id = 'app:%{user}' AND enabled = 1;
 
   # In case of failure, do not fallback to other passdbs
   passdb_result_failure = return-fail
